<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_favorites"
        android:title="@string/favorites" />
    <item
        android:id="@+id/nav_shuffle"
        android:title="@string/shuffle" />

    <item
        android:id="@+id/nav_load_dummy_data"
        android:title="@string/load_sample_data"
        android:visible="false" />

    <item
        android:id="@+id/nav_rearrange_flashcards"
        android:title="@string/rearrange_flashcards" />

    <item
        android:id="@+id/nav_rearrange_decks"
        android:title="@string/rearrange_decks" />

    <item
        android:id="@+id/nav_clear_data"
        android:title="@string/nav_delete_all_decks" />

    <item
        android:id="@+id/nav_about"
        android:title="@string/nav_about" />

    <item
        android:id="@+id/sync_wear"
        android:title="@string/nav_sync_with_wear" />
</menu>
