<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flashcard_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:orientation="horizontal"
    android:padding="16dp"
    tools:background="@android:color/darker_gray">

    <TextView
        android:id="@+id/flashcard_item_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        tools:text="Testing this is a really long string just to show the ..."
        tools:textColor="@android:color/black" />

    <LinearLayout
        android:id="@+id/flashcard_item_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/flashcard_item_edit"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_edit_white_48dp" />

        <ImageView
            android:id="@+id/flashcard_item_delete"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_clear_white_48dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <Button
            android:id="@+id/flashcard_item_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/view"
            android:textAllCaps="true" />

        <!--android:id="@+id/flashcard_item_edit"-->
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/menu_edit"
            android:textAllCaps="true" />

        <!--android:id="@+id/flashcard_item_delete"-->
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/menu_delete"
            android:textAllCaps="true" />

    </LinearLayout>
</LinearLayout>
