<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context="com.matt.flashcards.ThemeActivity">

    <TextView
        android:id="@+id/txt_theme_color_1_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/txt_theme_margin_left"
        android:layout_marginTop="@dimen/txt_theme_color_1_margin_top"
        android:text="@string/txt_color_1"
        android:textColor="@android:color/black"
        android:textSize="@dimen/theme_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_theme_color_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edit_theme_margin_left"
        android:layout_marginTop="@dimen/txt_theme_color_1_margin_top"
        android:background="@android:color/white"
        android:hint=""
        android:inputType="text"
        android:textSize="@dimen/theme_text_size"
        app:layout_constraintLeft_toRightOf="@id/txt_theme_color_1_label"
        app:layout_constraintRight_toRightOf="@id/guideline_theme"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".7" />

    <TextView
        android:id="@+id/txt_theme_color_2_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/txt_theme_margin_left"
        android:layout_marginTop="@dimen/txt_theme_margin_top"
        android:text="@string/txt_color_2"
        android:textColor="@android:color/black"
        android:textSize="@dimen/theme_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_theme_color_1_label" />

    <EditText
        android:id="@+id/edit_theme_color_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edit_theme_margin_left"
        android:layout_marginTop="@dimen/txt_theme_margin_top"
        android:background="@android:color/white"
        android:hint=""
        android:inputType="text"
        android:textSize="@dimen/theme_text_size"
        app:layout_constraintHorizontal_weight=".69"
        app:layout_constraintLeft_toRightOf="@id/txt_theme_color_2_label"
        app:layout_constraintRight_toRightOf="@id/guideline_theme"
        app:layout_constraintTop_toBottomOf="@id/edit_theme_color_1" />

    <TextView
        android:id="@+id/txt_theme_color_3_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/txt_theme_margin_left"
        android:layout_marginTop="@dimen/txt_theme_margin_top"
        android:text="@string/txt_color_3"
        android:textColor="@android:color/black"
        android:textSize="@dimen/theme_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_theme_color_2_label" />

    <EditText
        android:id="@+id/edit_theme_color_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edit_theme_margin_left"
        android:layout_marginTop="@dimen/txt_theme_margin_top"
        android:background="@android:color/white"
        android:hint=""
        android:inputType="text"
        android:textSize="@dimen/theme_text_size"
        app:layout_constraintLeft_toRightOf="@id/txt_theme_color_3_label"
        app:layout_constraintRight_toRightOf="@id/guideline_theme"
        app:layout_constraintTop_toBottomOf="@id/edit_theme_color_2" />

    <Button
        android:id="@+id/btn_theme_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_theme_margin_top"
        android:background="@android:color/white"
        android:text="@string/btn_enter"
        android:textAllCaps="false"
        android:textSize="@dimen/btn_theme_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_theme_color_3_label" />

</android.support.constraint.ConstraintLayout>
