<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/clt_mp_lobby_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/clt_mp_lobby_top_margin_bottom"
        android:layout_marginTop="@dimen/clt_mp_lobby_top_margin_top"
        app:layout_constraintBottom_toTopOf="@id/clt_mp_lobby_middle"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_mp_lobby_player_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingLeft="@dimen/mp_lobby_padding_horizontal"
            android:paddingRight="@dimen/mp_lobby_padding_horizontal"
            android:text="@string/txt_player_1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt_mp_lobby_text_size"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/txt_mp_lobby_player_2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_mp_lobby_player_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingLeft="@dimen/mp_lobby_padding_horizontal"
            android:paddingRight="@dimen/mp_lobby_padding_horizontal"
            android:text="@string/txt_player_2"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt_mp_lobby_text_size"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/txt_mp_lobby_player_1"
            app:layout_constraintRight_toLeftOf="@id/btn_mp_lobby_code"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_mp_lobby_code"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_mp_lobby_code_height"
            android:background="@android:color/white"
            android:paddingLeft="@dimen/mp_lobby_padding_horizontal"
            android:paddingRight="@dimen/mp_lobby_padding_horizontal"
            android:text="@string/btn_code"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/txt_mp_lobby_player_2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/clt_mp_lobby_middle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/clt_mp_lobby_middle_margin_bottom"
        android:layout_marginTop="@dimen/clt_mp_lobby_middle_margin_top"
        android:background="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/clt_mp_lobby_bottom"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clt_mp_lobby_top">

        <TextView
            android:id="@+id/txt_mp_lobby_invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/txt_mp_lobby_middle_margin_top"
            android:text="@string/txt_invite"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt_mp_lobby_text_size"
            android:textStyle="italic"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/guideline_mp_lobby"
            app:layout_constraintTop_toTopOf="parent"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline_mp_lobby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5"/>

        <TextView
            android:id="@+id/txt_mp_lobby_nearby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/txt_mp_lobby_middle_margin_top"
            android:text="@string/txt_nearby"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt_mp_lobby_text_size"
            android:textStyle="italic"
            app:layout_constraintLeft_toRightOf="@id/guideline_mp_lobby"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:id="@+id/divider_mp_lobby"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_mp_lobby_height"
            android:layout_marginBottom="@dimen/divider_mp_lobby_margin_vertical"
            android:layout_marginTop="@dimen/divider_mp_lobby_margin_vertical"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toTopOf="@id/grd_mp_lobby"
            app:layout_constraintTop_toBottomOf="@id/txt_mp_lobby_invite" />

        <GridView
            android:id="@+id/grd_mp_lobby"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:numColumns="2"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_mp_lobby" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/clt_mp_lobby_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clt_mp_lobby_middle">

        <Button
            android:id="@+id/btn_mp_lobby_start_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/btn_mp_lobby_start_margin_bottom"
            android:background="@android:color/white"
            android:paddingLeft="@dimen/mp_lobby_padding_horizontal"
            android:paddingRight="@dimen/mp_lobby_padding_horizontal"
            android:text="@string/btn_start_game"
            android:textAllCaps="false"
            android:textSize="@dimen/btn_mp_lobby_start_text_size"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
